--- a/Maven/Jenkinsfile
+++ b/Maven/Jenkinsfile
@@ -9,11 +9,13 @@ pipeline {
         stage('Increment version') {
             steps {
                 script {
+                 dir("Maven") {
                     'sh mvn build-helper:parse-version version:set \
                      -DnewVersion=\\\${parsedVersion.majorVersion}.\\\${parsedVersion.minorVersion}.\\\${parsedVersion.nextIncrementalVersion} versions:commit'
                     def matcher = readFile('pom.xml') =~ '<version>(.+)</version>'
                     def version = matcher[0][1]
                     env.IMAGE_NAME = "$version-$BUILD_NUMBER"
+                    }
                 }
             }
         }
