--- a/Maven/Jenkinsfile
+++ b/Maven/Jenkinsfile
@@ -15,27 +15,29 @@ pipeline {
                     def matcher = readFile('pom.xml') =~ '<version>(.+)</version>'
                     def version = matcher[0][1]
                     env.IMAGE_NAME = "$version-$BUILD_NUMBER"
+                    echo "IMAGE_NAME: ${env.IMAGE_NAME}"
+
                     }
                 }
             }
         }
-//         stage('Build the app') {
-//             steps {
-//                 script {
-//                     echo 'Building the app'
-//                     sh 'mvn clean package'
-//                 }
-//             }
-//         }
-//         stage('Docker build and push') {
-//             steps {
-//                 withCredentials([usernamePassword(credentialsId: 'docker-credentials', usernameVariable: 'USER', passwordVariable: 'PASS')]){
-//                      sh "docker build -t rodybothe2/mvn:${IMAGE_NAME} ."
-//                      sh 'echo $PASS | docker login -u $USER --password-stdin'
-//                      sh "docker push rodybothe2/mvn:${IMAGE_NAME}"
-//                 }
-//             }
-//         }
+        stage('Build the app') {
+            steps {
+                script {
+                    echo 'Building the app'
+                    sh 'mvn clean package'
+                }
+            }
+        }
+        stage('Docker build and push') {
+            steps {
+                withCredentials([usernamePassword(credentialsId: 'docker-credentials', usernameVariable: 'USER', passwordVariable: 'PASS')]){
+                     sh "docker build -t rodybothe2/mvn:${IMAGE_NAME} ."
+                     sh 'echo $PASS | docker login -u $USER --password-stdin'
+                     sh "docker push rodybothe2/mvn:${IMAGE_NAME}"
+                }
+            }
+        }
 //         stage('Deploy') {
 //             environment {
 //                 AWS_ACCESS_KEY_ID = credentials('jenkins_aws_access_key_id')
