--- a/Maven/Jenkinsfile
+++ b/Maven/Jenkinsfile
@@ -33,10 +33,14 @@ pipeline {
         }
         stage('Docker build and push') {
             steps {
+              script {
+                dir("Maven") {
                 withCredentials([usernamePassword(credentialsId: 'docker-credentials', usernameVariable: 'USER', passwordVariable: 'PASS')]){
                      sh "docker build -t rodybothe2/mvn:${IMAGE_NAME} ."
                      sh 'echo $PASS | docker login -u $USER --password-stdin'
                      sh "docker push rodybothe2/mvn:${IMAGE_NAME}"
+                       }
+                    }
                 }
             }
         }
